fixed overflow bug: gradient on wrong class

--- a/src/components/Carrousel/Carrousel.css
+++ b/src/components/Carrousel/Carrousel.css
@@ -45,10 +45,10 @@
 .carrousel--active {
     width: 100%;
     opacity: 1;
-    transition: linear 0.3s ;
+    transition: opacity linear 0.5s ;
 }
 
-.carrousel--slide::before {
+.carrousel--active::before {
     content: '';
     width: 100%;
     height: 100%;
@@ -56,7 +56,6 @@
     position: absolute;
     background: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
     border-radius: 10px;
-
 }
 
 
